--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1"
+sqlite = "0.30.4"
+flate2 = "1.0"
+indicatif = { version = "0.17.3", features = ["tokio"] }
